Vacuum agent application modified. Now supports sub-classing.